# NetworkThreatDetector

./: LICENSE  anomaly_detection.py  app.py  class_distribution.json  csv_processor.py  feature_importances.json  feature_scaler.joblib  iputils.py  ml_model.py  model_training_time.txt  models.py  pcap_processor.py  pyproject.toml  readme.md  requirements.txt  rule_based_detector.py  threat_detection_model.joblib  validation_data.npz  web_phishing_detector.py  zip_processor.py
instance/: pcap_analyzer.db
static/css/: custom.css
static/js/: app.js  charts.js
templates/: forensic_report.html  index.html  layout.html  report_template.html  results.html  threat_categories.html  threat_details.html  traffic_details.html  train.html  training_status.html
